<resources>
    <string name="app_name">moneywaysapp</string>
    <string name="greeting_text">Hello, </string>
    <string name="total_balance">Total Balance</string>
    <string name="sample_total_amount">R 5,000.00</string>
    <string name="budget_label">Budget</string>
    <string name="sample_budget">R 10,000.00</string>
    <string name="expenses_label">Expenses</string>
    <string name="sample_expenses">R 3,500.00</string>
    <string name="savings_label">Savings</string>
    <string name="sample_savings">R 2,500.00</string>
    <string name="add_expense">Add Expense</string>
    <string name="view_reports">View Reports</string>
    <string name="transactions">Transaction</string>
    <string name="money_ways">Money Ways</string>
    <string name="select">Select Item</string>
</resources>