<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F9FF"
   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <!-- Greeting -->
        <TextView
            android:id="@+id/greetingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/greeting_text"
            android:layout_marginStart="11dp"
            android:layout_marginTop="40dp"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_marginBottom="24dp" />

        <!-- Balance Card -->
        <LinearLayout
            android:id="@+id/balanceCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp"
            android:background="@drawable/card_background"
            android:layout_marginBottom="24dp"
            android:elevation="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_balance"
                android:textColor="#7A7A7A"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/totalBalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_total_amount"
                android:textColor="#000000"
                android:textSize="28sp"
                android:textStyle="bold"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"/>
        </LinearLayout>

        <!-- Buttons -->
        <Button
            android:id="@+id/addExpenseButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#4CAF50"
            android:drawableStart="@android:drawable/ic_input_add"
            android:text="@string/add_expense"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/action_view_expenses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#8BC34A"
            android:drawableStart="@android:drawable/ic_menu_agenda"
            android:text="@string/view_reports"
            android:textColor="#FFFFFF" />

        <!--View Stats-->


    </LinearLayout>
</ScrollView>